Fixed low resolution rendering on mobile phones and fixed styling on mobile screens

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -11,3 +11,21 @@
   align-items: center;
   flex-direction: column;
 }
+
+.header {
+  font-size: 3em;
+}
+
+.description {
+  font-size: 1em;
+}
+
+@media only screen and (max-width: 600px) {
+  .header {
+    font-size: 1em;
+  }
+
+  .description {
+    font-size: 1em;
+  }
+}
